--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,11 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	andrealombardo/L298N@^2.0.3
 	arduino-libraries/Servo@^1.2.2
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	mbed-sgrsn/Adafruit_TCS34725@0.0.0+sha.1bf53b314b01
 	adafruit/Adafruit TCS34725@^1.4.4
+	adafruit/Adafruit SSD1306@^2.5.13
